Fix long service names wrap and break the grid (#142)
* Fix long service names wrap and break the grid

* Add alt text to grid tiles titles

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -84,3 +84,9 @@
 .ImageListItem label {
   font-weight: bold
 }
+
+.MuiTypography-h5 {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
